# woxel

./: .gitignore  CNAME  Cargo.toml  README.md  Trunk.toml  index.html  woxel-b54907b8cc23bbe9.js
.github/workflows/: build-and-deploy.yml
src/: camera_controller.rs  frame_loop.rs  game_state.rs  input.rs  lib.rs  logging.rs  main.rs  render.rs  scene.rs  ui.rs  utils.rs  voxel_density.rs
src/controller/: camera_controller.rs  frame_loop.rs  input.rs  mod.rs  physics.rs
src/model/: camera.rs  mod.rs  scene.rs
src/model/world/: block.rs  chunk.rs  mod.rs
src/view/: gpu_init.rs  mod.rs  render.rs
src/view/shaders/: chunk.wgsl  outline.wgsl
src/world/: terrain.rs
