[package]
name = "woxel"
version = "0.1.0"
edition = "2021"
description = "A voxel-based Minecraft-style game engine in Rust with WASM and native support"
authors = ["Elias Wendt <git@eliaswendt.de>"]
repository = "https://github.com/eliaswendt/woxel"
keywords = ["voxel", "game", "wasm", "minecraft", "wgpu"]
categories = ["game-engines", "wasm", "graphics"]

[[bin]]
name = "woxel"
path = "src/main.rs"
required-features = ["native"]

[dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tracing-appender = "0.2"
tracing-wasm = "0.2"
once_cell = "1"
cfg-if = "1"
wgpu = { version = "27.0", features = ["wgsl", "webgpu", "webgl"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
egui = "0.33"
egui-wgpu = "0.33"
web-sys = { version = "0.3", features = [
	"Window",
	"Document",
	"HtmlCanvasElement",
	"Element",
	"KeyboardEvent",
	"MouseEvent",
	"HtmlElement",
	"Performance",
	"Event",
	"console",
] }
console_error_panic_hook = { version = "0.1", optional = true }
glam = { version = "0.27" }
bytemuck = { version = "1", features = ["derive"] }
image = { version = "0.25", default-features = false, features = ["webp"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
winit = { version = "0.30" }
pollster = "0.3"
env_logger = "0.11"
egui = "0.33"
egui-wgpu = "0.33"
egui-winit = "0.33"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]
native = []

[profile.release]
strip = true